Cambios de la API por que se cambio un poco la base y errores graves ya estuvo